--- a/roles/k3s-master-up/tasks/main.yml
+++ b/roles/k3s-master-up/tasks/main.yml
@@ -22,3 +22,13 @@
     src: /var/lib/rancher/k3s/server/node-token
   run_once: yes
 - meta: flush_handlers
+- name: apply post-master-up hooks
+  local_action:
+    module: 'command kubectl --kubeconfig=build/k3s-config.yml {{ item.split("-")[0] }} --filename=hooks/{{ item }}.yml'
+    removes: 'hooks/{{ item }}.yml' # it doesn't, but it prevents this step from running if it is
+  run_once: yes
+  vars:
+    ansible_become: no
+  with_items:
+    - apply-post-master-up
+    - apply-k3s-post-master-up
