--- a/roles/k8s-master-up/tasks/main.yml
+++ b/roles/k8s-master-up/tasks/main.yml
@@ -11,7 +11,7 @@
     src: /etc/kubernetes/admin.conf
   run_once: yes
 - name: apply flannel
-  shell: kubectl --kubeconfig=/etc/kubernetes/admin.conf apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+  shell: kubectl --kubeconfig=/etc/kubernetes/admin.conf apply --filename=https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
   run_once: yes
 - name: register k8s token
   shell: kubeadm token list | awk 'NR == 2 { print $1 }'
@@ -25,3 +25,13 @@
   run_once: yes
   vars:
     ansible_become: no
+- name: apply post-master-up hooks
+  local_action:
+    module: 'command kubectl --kubeconfig=build/k8s-config.yml {{ item.split("-")[0] }} --filename=hooks/{{ item }}.yml'
+    removes: 'hooks/{{ item }}.yml' # it doesn't, but it prevents this step from running if it is
+  run_once: yes
+  vars:
+    ansible_become: no
+  with_items:
+    - apply-post-master-up
+    - apply-k8s-post-master-up
