Fixes persistence of swap-file settings.

--- a/roles/raspbian-swap-down/tasks/main.yml
+++ b/roles/raspbian-swap-down/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - name: disable swap-space
-  command: dphys-swapfile uninstall
+  shell: dphys-swapfile uninstall && update-rc.d dphys-swapfile disable
   args:
     removes: /var/swap
