--- a/up.yml
+++ b/up.yml
@@ -7,6 +7,10 @@
     - ubuntu
   roles:
     - debian-up
+- hosts:
+    - ubuntu:&raspberry_pi
+  roles:
+    - ubuntu-raspberry-pi-up
 - hosts: raspbian
   roles:
     - raspbian-swap-down
