--- a/roles/debian-up/defaults/main.yml
+++ b/roles/debian-up/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 ansible_become: yes
+locale: C.UTF-8
 no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
 proxy_url: ''
 timezone: UTC
