The service name is `cron`, not `crond`.

--- a/roles/debian-up/handlers/main.yml
+++ b/roles/debian-up/handlers/main.yml
@@ -5,7 +5,7 @@
     state: reloaded
 - name: restart cron
   service:
-    name: crond
+    name: cron
     state: restarted
 - name: reboot system
   reboot: {}
