--- a/inventory.yml
+++ b/inventory.yml
@@ -67,9 +67,12 @@ all:
     #containerd_version: 1.2.6-3
     # Do you want to delete local data in k3s, k8s and Docker upon teardown?
     #delete_local_data: no
+    #docker_apt_key_id: 8D81803C0EBFCD88
+    #docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
+    #docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
     # Make sure to match the `no_proxy` pattern or otherwise expect Docker images to be proxied twice:
     #docker_registry_mirror_url: https://my-docker-registry-mirror.local/
-    #docker_version: "5:18.09.9~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename }}"
+    #docker_version: "5:18.09.9~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}"
     #k3s_version: v0.9.0-rc2 # https://github.com/rancher/k3s/releases
     #k8s_version: 1.15.3-00
     #kuberneted_cni_version: 0.7.5-00
