--- a/roles/k3s-worker-down/tasks/main.yaml
+++ b/roles/k3s-worker-down/tasks/main.yaml
@@ -7,10 +7,10 @@
   local_action:
     module: shell
     _raw_params: |
-      export KUBECONFIG=build/k3s-config.yml
+      export KUBECONFIG=build/k3s-config.yaml
       kubectl drain {{ inventory_hostname }} --delete-local-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
       kubectl delete node {{ inventory_hostname }}
-    removes: build/k3s-config.yml # it doesn't, but it prevents this step from running if it is
+    removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
   vars:
     ansible_become: no
   when: k3s_agent.stat.exists
