--- a/roles/k8s-commons-down/tasks/main.yaml
+++ b/roles/k8s-commons-down/tasks/main.yaml
@@ -5,8 +5,8 @@
   register: kubelet_conf
 - name: apply pre-master-down hooks
   local_action:
-    module: 'command kubectl --kubeconfig=build/k8s-config.yml apply --filename=hooks/{{ item }}.yml'
-    removes: 'hooks/{{ item }}.yml' # it doesn't, but it prevents this step from running if it is
+    module: 'command kubectl --kubeconfig=build/k8s-config.yaml apply --filename=hooks/{{ item }}.yaml'
+    removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
   run_once: yes
   vars:
     ansible_become: no
@@ -18,10 +18,10 @@
   local_action:
     module: shell
     _raw_params: |
-      export KUBECONFIG=build/k8s-config.yml
+      export KUBECONFIG=build/k8s-config.yaml
       kubectl drain {{ inventory_hostname }} --delete-local-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
       kubectl delete node {{ inventory_hostname }}
-    removes: build/k8s-config.yml # it doesn't, but it prevents this step from running if it is
+    removes: build/k8s-config.yaml # it doesn't, but it prevents this step from running if it is
   vars:
     ansible_become: no
   when: kubelet_conf.stat.exists
