--- a/roles/k3s-master-up/tasks/main.yaml
+++ b/roles/k3s-master-up/tasks/main.yaml
@@ -20,9 +20,11 @@
     src: /var/lib/rancher/k3s/server/node-token
 - meta: flush_handlers
 - name: apply post-master-up hooks
+  changed_when: "'created' in post_master_up.stdout or 'configured' in post_master_up.stdout"
   local_action:
     module: 'command kubectl --kubeconfig=build/k3s-config.yaml apply --filename=hooks/{{ item }}.yaml'
     removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
+  register: post_master_up
   vars:
     ansible_become: no
   with_items:
