--- a/roles/k8s-commons-down/tasks/main.yaml
+++ b/roles/k8s-commons-down/tasks/main.yaml
@@ -4,9 +4,11 @@
     path: /etc/kubernetes/kubelet.conf
   register: kubelet_conf
 - name: apply pre-master-down hooks
+  changed_when: "'created' in pre_master_down.stdout or 'configured' in pre_master_down.stdout"
   local_action:
     module: 'command kubectl --kubeconfig=build/k8s-config.yaml apply --filename=hooks/{{ item }}.yaml'
     removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
+  register: pre_master_down
   run_once: yes
   vars:
     ansible_become: no
