--- a/roles/debian-down/tasks/main.yaml
+++ b/roles/debian-down/tasks/main.yaml
@@ -7,7 +7,7 @@
 - name: remove environment variables HTTP_PROXY and HTTPS_PROXY
   lineinfile:
     path: /etc/environment
-    regexp: '^\s*{{ item }}\s*=\s*'
+    regexp: '^\s*{{ item }}\s*='
     state: absent
   notify: reboot system
   when: proxy_url != ''
@@ -19,7 +19,7 @@
 - name: remove environment variable NO_PROXY
   lineinfile:
     path: /etc/environment
-    regexp: '^\s*{{ item }}\s*=\s*'
+    regexp: '^\s*{{ item }}\s*='
     state: absent
   notify: reboot system
   when: proxy_url != ''
