--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -3,7 +3,7 @@
   lineinfile:
     line: '{{ item }}={{ no_proxy }}'
     path: /etc/environment
-    regexp: '^\s*{{ item }}\s*=\s*'
+    regexp: '^\s*{{ item }}\s*='
   notify: reboot system
   when: proxy_url != ''
   with_items:
@@ -13,7 +13,7 @@
   lineinfile:
     line: '{{ item }}={{ proxy_url }}'
     path: /etc/environment
-    regexp: '^\s*{{ item }}\s*=\s*'
+    regexp: '^\s*{{ item }}\s*='
   notify: reboot system
   when: proxy_url != ''
   with_items:
@@ -60,7 +60,7 @@
   lineinfile:
     line: 'LANG={{ locale }}'
     path: /etc/default/locale
-    regexp: '^\s*#?\s*LANG\s*=\s*'
+    regexp: '^\s*#?\s*LANG\s*='
   notify: reboot system
 - name: edit /etc/hosts
   lineinfile:
