--- a/roles/k8s-master-up/tasks/main.yaml
+++ b/roles/k8s-master-up/tasks/main.yaml
@@ -9,6 +9,8 @@
     flat: yes
     src: /etc/kubernetes/admin.conf
 - name: apply flannel
+  changed_when: "'created' in flannel_up.stdout or 'configured' in flannel_up.stdout"
+  register: flannel_up
   shell: kubectl --kubeconfig=/etc/kubernetes/admin.conf apply --filename=https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 - name: register k8s token
   shell: kubeadm token list | awk 'NR == 2 { print $1 }'
