--- a/roles/k8s-worker-up/tasks/main.yaml
+++ b/roles/k8s-worker-up/tasks/main.yaml
@@ -3,12 +3,17 @@
   changed_when: false
   local_action: command cat build/k8s-token
   register: k8s_token
+  run_once: yes
   vars:
     ansible_become: no
 - name: register k8s address
+  args:
+    warn: no
   changed_when: false
-  local_action: 'command sed -n -E -e "s/^ +server: +https?:\/\/([^\/]+)$/\1/p" build/k8s-config.yaml'
+  command: 'sed -n -E -e "s/^ +server: +https?:\/\/([^\/]+)$/\1/p" build/k8s-config.yaml'
+  delegate_to: localhost
   register: k8s_address
+  run_once: yes
   vars:
     ansible_become: no
 - name: kubeadm join
