--- a/roles/raspberry-pi-up/tasks/main.yaml
+++ b/roles/raspberry-pi-up/tasks/main.yaml
@@ -16,25 +16,27 @@
 - name: set arm_64bit
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
-    line: "arm_64bit=1"
+    line: "arm_64bit={{ arm_64bit }}"
     path: '{{ boot_directory }}/config.txt'
     regexp: '^\s*#?\s*arm_64bit\s*='
   notify: reboot system
-  when: set_arm_64bit
-- name: set over_voltage
-  lineinfile:
-    insertafter: '^\s*\[\s*all\s*\]'
-    line: "over_voltage=2"
-    path: '{{ boot_directory }}/config.txt'
-    regexp: '^\s*#?\s*over_voltage\s*='
-  notify: reboot system
+  when: arm_64bit != None
 - name: set arm_freq
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
-    line: "arm_freq=1750"
+    line: "arm_freq={{ arm_freq }}"
     path: '{{ boot_directory }}/config.txt'
     regexp: '^\s*#?\s*arm_freq\s*='
   notify: reboot system
+  when: arm_freq != None
+- name: set over_voltage
+  lineinfile:
+    insertafter: '^\s*\[\s*all\s*\]'
+    line: "over_voltage={{ over_voltage }}"
+    path: '{{ boot_directory }}/config.txt'
+    regexp: '^\s*#?\s*over_voltage\s*='
+  notify: reboot system
+  when: over_voltage != None
 - name: remove macOS artifacts from /boot directory
   file:
     path: '{{ boot_directory }}/.Spotlight-V100'
