--- a/roles/debian-up/defaults/main.yaml
+++ b/roles/debian-up/defaults/main.yaml
@@ -2,5 +2,5 @@
 ansible_become: yes
 locale: C.UTF-8
 no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
-proxy_url: ''
+proxy_url: None
 timezone: UTC
