--- a/roles/raspberry-pi-up/tasks/main.yaml
+++ b/roles/raspberry-pi-up/tasks/main.yaml
@@ -1,19 +1,19 @@
 ---
-- name: set gpu_mem
-  lineinfile:
-    insertafter: '^\s*\[\s*all\s*\]'
-    line: "gpu_mem=16"
-    path: '{{ boot_directory }}/config.txt'
-    regexp: '^\s*#?\s*gpu_mem\s*='
-  notify: reboot system
-- name: unset disable_oversan
+- name: comment out disable_oversan
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
     line: "#disable_overscan=1"
     path: '{{ boot_directory }}/config.txt'
     regexp: '^\s*#?\s*disable_overscan\s*='
   notify: reboot system
-- name: set arm_64bit
+- name: set gpu_mem=16
+  lineinfile:
+    insertafter: '^\s*\[\s*all\s*\]'
+    line: "gpu_mem=16"
+    path: '{{ boot_directory }}/config.txt'
+    regexp: '^\s*#?\s*gpu_mem\s*='
+  notify: reboot system
+- name: "set arm_64bit={{ arm_64bit }}"
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
     line: "arm_64bit={{ arm_64bit }}"
@@ -21,7 +21,7 @@
     regexp: '^\s*#?\s*arm_64bit\s*='
   notify: reboot system
   when: arm_64bit != None
-- name: set arm_freq
+- name: "set arm_freq={{ arm_freq }}"
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
     line: "arm_freq={{ arm_freq }}"
@@ -29,7 +29,7 @@
     regexp: '^\s*#?\s*arm_freq\s*='
   notify: reboot system
   when: arm_freq != None
-- name: set over_voltage
+- name: "set over_voltage={{ over_voltage }}"
   lineinfile:
     insertafter: '^\s*\[\s*all\s*\]'
     line: "over_voltage={{ over_voltage }}"
