Don't fail down if draining and deleting the node fails.

--- a/roles/k3s-worker-down/tasks/main.yaml
+++ b/roles/k3s-worker-down/tasks/main.yaml
@@ -4,6 +4,7 @@
     path: /usr/local/bin/k3s-agent-uninstall.sh
   register: k3s_agent
 - name: drain and delete node
+  failed_when: false
   local_action:
     module: shell
     _raw_params: |
