--- a/inventory.yaml
+++ b/inventory.yaml
@@ -77,7 +77,7 @@ all:
     #docker_version: "5:19.03.4~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}"
     #k3s_version: v1.0.0 # https://github.com/rancher/k3s/releases
     #k8s_version: 1.16.3-00
-    #kuberneted_cni_version: 0.7.5-00
+    #kubernetes_cni_version: 0.7.5-00
     #locale: C.UTF-8
     # Make sure to match all nodes and the `docker_registry_mirror_url`:
     #no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
