--- a/inventory.yaml
+++ b/inventory.yaml
@@ -77,7 +77,7 @@ all:
     # Make sure to match the `no_proxy` pattern or otherwise expect Docker images to be proxied twice:
     #docker_registry_mirror_url: https://my-docker-registry-mirror.local/
     #docker_version: "5:19.03.6~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}" (https://docs.docker.com/install/linux/docker-ce/ubuntu/)
-    #k3s_version: v1.17.3-rc1+k3s1 (https://github.com/rancher/k3s/releases)
+    #k3s_version: v1.17.3+k3s1 (https://github.com/rancher/k3s/releases)
     #k8s_version: 1.17.3-00
     #kubernetes_cni_version: 0.7.5-00
     #locale: C.UTF-8
