Don't mess with config.txt anymore. Set cgroup kernel parameters for Docker.

--- a/down.yaml
+++ b/down.yaml
@@ -19,9 +19,12 @@
     - ubuntu
   roles:
     - debian-down
-- hosts: raspbian
-  roles:
-    - raspbian-down
 - hosts: ubuntu
   roles:
     - ubuntu-down
+- hosts: raspbian
+  roles:
+    - raspbian-down
+- hosts: raspberry_pi
+  roles:
+    - raspberry-pi-down
