--- a/roles/raspberry-pi-down/tasks/main.yaml
+++ b/roles/raspberry-pi-down/tasks/main.yaml
@@ -2,8 +2,7 @@
 - name: ensure cgroup kernel params
   lineinfile:
     backrefs: yes
-    #    line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
-    line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
+    line: '\g<1>\g<2>'
     path: '{{ cmdline_txt }}'
     regexp: '^(.*\bconsole=tty1\b).*( root=LABEL\b.*)$'
   notify: reboot system
