--- a/inventory.yaml
+++ b/inventory.yaml
@@ -32,7 +32,7 @@ all:
         node-6: {}
     k8s_master:
       hosts:
-      # At most one master:
+        # At most one master:
     k8s_worker:
       hosts:
       # At least one worker unless there is no master:
@@ -54,6 +54,7 @@ all:
       vars:
         ansible_ssh_user: pi
         boot_directory: /boot
+        cmdline_txt: '{{ boot_directory }}/cmdline.txt'
     ubuntu:
       hosts:
         node-0: {}
@@ -66,9 +67,10 @@ all:
       vars:
         ansible_ssh_user: ubuntu
         boot_directory: /boot/firmware
+        cmdline_txt: '{{ boot_directory }}/nobtcmd.txt'
   vars:
     ansible_python_interpreter: /usr/bin/python3
-    #containerd_version: 1.2.10-3
+    #containerd_version: 1.2.13-2
     # Do you want to delete local data in k3s, k8s and Docker upon teardown?
     #delete_local_data: no
     #docker_apt_key_id: 8D81803C0EBFCD88
@@ -76,10 +78,10 @@ all:
     #docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
     # Make sure to match the `no_proxy` pattern or otherwise expect Docker images to be proxied twice:
     #docker_registry_mirror_url: https://my-docker-registry-mirror.local/
-    #docker_version: "5:19.03.6~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}" (https://docs.docker.com/install/linux/docker-ce/ubuntu/)
-    #k3s_version: v1.17.4+k3s1 (https://github.com/rancher/k3s/releases)
-    #k8s_version: 1.17.4-00
-    #kubernetes_cni_version: 0.7.5-00
+    #docker_version: "5:19.03.11~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}" # (https://docs.docker.com/install/linux/docker-ce/ubuntu/)
+    #k3s_version: v1.18.3+k3s1 # (https://github.com/rancher/k3s/releases)
+    #k8s_version: 1.17.4-00 # (https://github.com/kubernetes/kubernetes/releases)
+    #kubernetes_cni_version: 0.7.5-00 # (https://github.com/containernetworking/plugins/releases)
     #locale: C.UTF-8
     # Make sure to match all nodes and the `docker_registry_mirror_url`:
     #no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
