--- a/roles/raspberry-pi-up/tasks/main.yaml
+++ b/roles/raspberry-pi-up/tasks/main.yaml
@@ -1,10 +1,14 @@
 ---
 - name: ensure cgroup kernel params
+  failed_when: false
   lineinfile:
     backrefs: yes
     #    line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
     line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
-    path: '{{ cmdline_txt }}'
+    path: '{{ boot_directory }}/{{ item }}'
     regexp: '^(.*\bconsole=tty1\b).*( root=LABEL\b.*)$'
   notify: reboot system
+  with_items:
+    - cmdline.txt
+    - nobtcmd.txt
 - meta: flush_handlers
