--- a/inventory.yaml
+++ b/inventory.yaml
@@ -69,7 +69,7 @@ all:
     #docker_apt_key_id: 8D81803C0EBFCD88
     #docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
     #docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
-    # Make sure to match the `no_proxy` pattern or otherwise expect Docker images to be proxied twice:
+    # Make sure to match the `no_proxy` list or otherwise expect Docker images to be proxied twice:
     #docker_registry_mirror_url: https://my-docker-registry-mirror.local/
     #docker_version: "5:19.03.12~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}" # (https://docs.docker.com/install/linux/docker-ce/ubuntu/)
     #k3s_version: v1.17.9+k3s1 # (https://github.com/rancher/k3s/releases)
@@ -77,7 +77,7 @@ all:
     #kubernetes_cni_version: 0.7.5-00 # (https://github.com/containernetworking/plugins/releases)
     #locale: C.UTF-8
     # Make sure to match all nodes and the `docker_registry_mirror_url`:
-    #no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
+    #no_proxy: 127.0.0.1,.local,localhost
     # Make sure to use an IP address, not a hostname, or otherwise expect the Kubernetes setup to fail:
     #proxy_url: http://10.0.0.1:3128/
     #timezone: UTC
