--- a/roles/debian-up/defaults/main.yaml
+++ b/roles/debian-up/defaults/main.yaml
@@ -1,6 +1,6 @@
 ---
 ansible_become: yes
 locale: C.UTF-8
-no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
+no_proxy: 127.0.0.1,.local,localhost
 proxy_url: None
 timezone: UTC
