--- a/roles/docker-up/defaults/main.yaml
+++ b/roles/docker-up/defaults/main.yaml
@@ -6,5 +6,5 @@ docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower()
 docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
 docker_registry_mirror_url: None
 docker_version: "5:19.03.12~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}"
-no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
+no_proxy: 127.0.0.1,.local,localhost
 proxy_url: None
