--- a/roles/docker-up/defaults/main.yaml
+++ b/roles/docker-up/defaults/main.yaml
@@ -4,7 +4,7 @@ containerd_version: 1.2.13-2
 docker_apt_key_id: 8D81803C0EBFCD88
 docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
 docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename.lower() }} stable"
-docker_registry_mirror_url: None
+docker_registry_mirror_url: null
 docker_version: "5:19.03.12~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename.lower() }}"
 no_proxy: 127.0.0.1,.local,localhost
-proxy_url: None
+proxy_url: null
